product info added

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #bfeef1;
+    background-color: #ede6d7;
     padding: 4px;
     display: flex;
     align-items: center;
