--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -20,10 +20,11 @@
 
 .product-info h4 {
     font-family: Loto;
+    margin-bottom: 20px;
 }
 
 .product-info p {
-    margin-bottom: 2px;
+    margin-bottom: 4px;
     margin-top: 0px;
 }
 
@@ -39,5 +40,9 @@
     background-color: #27343c56;
     position: absolute;
     bottom: 0;
+    font-weight: 700;
+}
 
+.btn button:hover {
+    color: rgb(232, 245, 255);
 }
